--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
   </head>
   <body>
     <header>
-      <a href="./index.html">
-        <img src="./images/logo.svg" alt="Web Studio logo" />
-      </a>
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-accent">Studio</span></a
+      >
+
       <nav class="site-nav">
         <ul class="nav-list">
           <li class="nav-item">
@@ -225,14 +226,9 @@
       </section>
     </main>
     <footer class="site-footer">
-      <a class="footer-logo" href="./index.html">
-        <img
-          src="./images/logo.svg"
-          alt="Web Studio logo"
-          width="115"
-          height="24"
-        />
-      </a>
+      <a class="footer-logo" href="./index.html"
+        >Web<span class="logo-accent">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
